<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signin"
            android:icon="@drawable/outline_lock_black_24dp"
            android:title="@string/signin" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/outline_supervisor_account_black_24dp"
            android:title="@string/signup" />
        <item
            android:id="@+id/nav_ploffer"
            android:icon="@drawable/outline_add_circle_outline_black_24dp"
            android:title="@string/ploffer" />
        <item
            android:id="@+id/nav_myitems"
            android:icon="@drawable/outline_view_list_black_18dp"
            android:title="@string/myitems" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/outline_phone_black_24dp"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/outline_view_compact_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_lock_open_black_24dp"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_dbsettings"
            android:icon="@drawable/outline_brightness_high_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>
