<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeContacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ContactsFragment">

    <LinearLayout
        android:id="@+id/contactsMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/pageTitle"
        android:layout_below="@id/contactsMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contacts"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/wrkhours"
        android:layout_below="@id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:text="@string/workingtime"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/wrkweek"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/phone"
        android:layout_below="@id/wrkhours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:text="@string/phone"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="+7 (7232) 524584"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/address"
        android:layout_below="@id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:text="@string/address"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/addressinfo"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/companydata"
        android:layout_below="@id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/companydata"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bin"
        android:layout_below="@id/companydata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:text="@string/bin"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="640980000039"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bik"
        android:layout_below="@id/bin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:text="@string/bin"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="KJCKZXKX"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/companyname"
        android:layout_below="@id/bik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:text="@string/orgname"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/app_name"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>