<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rightLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/agroculture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_agroculture"
                android:background="@null"
                android:scaleType="centerCrop"
                android:tint="#8F000000"/>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:text="@string/agriculture" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/cargo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_cargo"
                android:background="@null"
                android:scaleType="centerCrop"
                android:tint="#8F000000"/>

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:text="@string/cargo" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay3"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/repair"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_repair1"
                android:background="@null"
                android:scaleType="centerCrop"
                android:tint="#8F000000"/>

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:text="@string/repair" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>